# Deepfake-cctv

./: .gitignore  Deepfake_Detector.py  Deepfake_dataset_downloader.py  Deepfake_generator.py  README.md  augment_fixed.py  extract_desktop.py  faceforensics_extractor.py  finetune.py
Deepfake_Detection_Project/Deepfake_Detection_Project/: predict.py  train_large.py
cctv_dfd/: .gitignore  README.md  pyproject.toml
cctv_dfd/api/: server.py
cctv_dfd/api/static/: index.html
cctv_dfd/configs/: clip_b16_mlp.yaml  degradations.yaml  dinov2s_mlp.yaml  enhance.yaml
cctv_dfd/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
cctv_dfd/frontend/src/: App.jsx  index.css
cctv_dfd/frontend/src/services/: api.js
cctv_dfd/notebooks/: 00_smoke_test.ipynb  01_train_local.ipynb  02_train_ffpp.ipynb
cctv_dfd/src/cctv_dfd/: __init__.py  cli.py  data.py  degradations.py  enhance.py  eval.py  explain.py  face_extract.py  features.py  forensic_log.py  head.py  seed.py  train.py
surveillance/surveillance/: face_swap_script.py  train.py
